--- a/index.html
+++ b/index.html
@@ -46,3 +46,101 @@
             max-width: 1000px;
             margin: 60px auto;
             padding: 0 20px;
+        }
+
+        h2 {
+            font-size: 1.8rem;
+            margin-bottom: 20px;
+            border-left: 5px solid var(--primary);
+            padding-left: 15px;
+        }
+
+        .about p {
+            color: var(--gray);
+            font-size: 1rem;
+        }
+
+        .projects {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+            gap: 20px;
+        }
+
+        .card {
+            background: white;
+            padding: 25px;
+            border-radius: 12px;
+            box-shadow: 0 5px 20px rgba(0,0,0,0.05);
+            transition: transform 0.3s;
+        }
+
+        .card:hover {
+            transform: translateY(-5px);
+        }
+
+        .card h3 {
+            margin-bottom: 10px;
+            color: var(--primary);
+        }
+
+        .card p {
+            color: var(--gray);
+            font-size: 0.95rem;
+        }
+
+        footer {
+            text-align: center;
+            padding: 30px 20px;
+            background: white;
+            color: var(--gray);
+            margin-top: 60px;
+        }
+    </style>
+</head>
+<body>
+
+    <header>
+        <h1>Shiren Nafiani</h1>
+        <p>Siswa SMK 1 Barunawati | Teknik Jaringan Komputer dan Telekomunikasi</p>
+    </header>
+
+    <section class="about">
+        <h2>Tentang Saya</h2>
+        <p>
+            Saya adalah siswa SMK 1 Barunawati jurusan Teknik Jaringan Komputer dan Telekomunikasi (TJKT).
+            Saya memiliki minat di bidang jaringan komputer, perakitan perangkat keras, dan pengembangan website sederhana.
+            Terbiasa bekerja secara rapi, teliti, dan bertanggung jawab.
+        </p>
+    </section>
+
+    <section>
+        <h2>Projek yang Pernah Dikerjakan</h2>
+        <div class="projects">
+            <div class="card">
+                <h3>Perakitan PC</h3>
+                <p>Merakit komputer dari komponen terpisah hingga siap digunakan, termasuk pengecekan hardware dan instalasi sistem.</p>
+            </div>
+
+            <div class="card">
+                <h3>Instalasi Kabel Jaringan</h3>
+                <p>Melakukan pemasangan dan crimping kabel LAN untuk kebutuhan jaringan lokal.</p>
+            </div>
+
+            <div class="card">
+                <h3>Topologi Jaringan</h3>
+                <p>Memahami dan menerapkan berbagai topologi jaringan seperti star, bus, dan tree.</p>
+            </div>
+
+            <div class="card">
+                <h3>Website Sederhana</h3>
+                <p>Membuat website sederhana menggunakan HTML dan CSS dengan tampilan rapi dan responsif.</p>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <p>&copy; 2026 Shiren Nafiani. All rights reserved.</p>
+    </footer>
+
+</body>
+</html>
